added helper buttons

--- a/Recho/css/style.css
+++ b/Recho/css/style.css
@@ -32,12 +32,48 @@ App
   font-size: inherit;
 }
 
-.search-form {
+#search-container {
   position: relative;
   z-index: 1;
-  top: 5%;
-  left: 200px;
-  width: 350px;
+  top: 3%;
+  /*background-color: black;*/
+  left: 25px;
+  width: min-content;
+  height: min-content;
+}
+
+.suggestion-list {
+  position: relative;
+  width: 388px;
+  left: 6px;
+  top: -10px;
+  visibility: hidden;
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.25);
+  list-style-type: none;
+  font-size: 16px;
+  font-family: larger Lato, Roboto, sans-serif;
+  color: #5a6674;
+  background-color: white;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.suggested-item {
+  position: relative;
+  left: 13px;
+  padding: 2px 0px;
+  cursor: default;
+}
+
+.suggested-item:hover {
+  color: black;
+}
+
+#search-form {
+  position: relative;
+  top: 25px;
+  left: 205px;
+  width: 400px;
   height: 40px;
   border-radius: 5px;
   border-style: solid;
@@ -50,7 +86,7 @@ App
   transition: all 0.1s ease;
 }
 
-.search-form.focus {
+#search-form.focus {
   position: relative;
   z-index: 1;
   box-shadow: 0 0px 5px rgba(0, 0, 0, 0.25);
@@ -78,10 +114,30 @@ App
           appearance: none;
 }
 
+.char-button {
+  position: relative;
+  top: -5px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  width: 30px;
+  height: 30px;
+}
+
+.char-button:focus{
+  outline: none;
+}
+
+#intersection-button {
+  left: 0px;
+}
+
 .search-button {
   position: relative;
   top: 5px;
-  left: 20px;
+  left: 2px;
   padding: 0;
   margin: 0;
   border: none;
@@ -96,31 +152,6 @@ App
   fill: #5a6674;
 }
 
-.suggestion-list {
-  position: relative;
-  top: -8px;
-  visibility: hidden;
-  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.25);
-  list-style-type: none;
-  font-size: 16px;
-  /*font-family: Ubuntu;*/
-  font-family: larger Lato, Roboto, sans-serif;
-  color: #5a6674;
-  background-color: white;
-  padding: 5px;
-  border-radius: 5px;
-}
-
-.suggested-item {
-  position: relative;
-  left: 13px;
-  padding: 2px 0px;
-  cursor: default;
-}
-
-.suggested-item:hover {
-  color: black;
-}
 
 #svg-container {
   position: absolute;
@@ -185,7 +216,6 @@ App
 	fill: black;
 	font-family: 'Courier';
 	font-size: 10px;
-	
 }
 
 path {
