--- a/Recho/css/style.css
+++ b/Recho/css/style.css
@@ -63,12 +63,13 @@ App
   left: 13px;
   padding: 2px 0px;
   cursor: default;
+  outline: none;
 }
-
+/*
 .suggested-item:hover {
   color: black;
 }
-
+*/
 #search-form {
   position: relative;
   top: 25px;
